--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="location">Location</string>
     <string name="image_background">image background</string>
     <string name="character_image">character image</string>
+    <string name="error_image">error image</string>
 </resources>
